CREATE TABLE "stops" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY UNIQUE PRIMARY KEY NOT NULL,
  "nyct_stop_id" varchar(4) UNIQUE NOT NULL,
  "stop_name" varchar(256) NOT NULL,
  "latitude" float8 NOT NULL,
  "longitude" float8 NOT NULL
);

CREATE TABLE "trips_scheduled" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY UNIQUE PRIMARY KEY NOT NULL,
  "nyct_trip_id" varchar(45) UNIQUE NOT NULL,
  "service_id" integer,
  "route_id" integer NOT NULL,
  "shape_id" integer NOT NULL
);

CREATE TABLE "transfers" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY UNIQUE PRIMARY KEY NOT NULL,
  "from_stop_id" integer NOT NULL,
  "to_stop_id" integer NOT NULL,
  "transfer_time_min" integer DEFAULT 0,
  "is_walking_transfer" bool NOT NULL
);

CREATE TABLE "trip_stop_times_scheduled" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY UNIQUE PRIMARY KEY NOT NULL,
  "trip_id" integer NOT NULL,
  "stop_id" integer NOT NULL,
  "dep_time" time NOT NULL,
  "dep_time_is_next_day" bool DEFAULT false,
  "arr_time" time NOT NULL,
  "arr_time_is_next_day" bool DEFAULT false,
  "sequence_number" integer NOT NULL
);

CREATE TABLE "routes" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY UNIQUE PRIMARY KEY NOT NULL,
  "route_id" varchar(2) UNIQUE NOT NULL,
  "route_name" varchar(100),
  "color_hex" varchar(7)
);

CREATE TABLE "shapes" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY UNIQUE PRIMARY KEY NOT NULL,
  "shape_id" varchar(10) NOT NULL
);

CREATE TABLE "shape_points" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY UNIQUE PRIMARY KEY NOT NULL,
  "shape_pt_sequence" integer NOT NULL,
  "shape_id" integer NOT NULL,
  "latitude" float8 NOT NULL,
  "longitude" float8 NOT NULL
);

CREATE TABLE "users" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY UNIQUE PRIMARY KEY NOT NULL,
  "unique_device_uuid" varchar(1000) UNIQUE NOT NULL
);

CREATE TABLE "attempts" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY UNIQUE PRIMARY KEY NOT NULL,
  "user_id" integer NOT NULL,
  "started_at" timestamp,
  "ended_at" timestamp
);

CREATE TABLE "stops_visited" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY UNIQUE PRIMARY KEY NOT NULL,
  "stop_id" integer NOT NULL,
  "attempt_id" integer NOT NULL,
  "visitedat" timestamp
);

CREATE TABLE "trip_stop_times_realtime" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY UNIQUE PRIMARY KEY NOT NULL,
  "trip_id" integer NOT NULL,
  "stop_id" integer NOT NULL,
  "dep_time" time NOT NULL,
  "dep_time_is_next_day" bool DEFAULT false,
  "arr_time" time NOT NULL,
  "arr_time_is_next_day" bool DEFAULT false,
  "sequence_number" integer NOT NULL
);

CREATE TABLE "segment" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY UNIQUE PRIMARY KEY NOT NULL,
  "attempt_id" integer NOT NULL,
  "trip_id" integer NOT NULL,
  "from_stop_id" integer NOT NULL,
  "to_stop_id" integer NOT NULL
);

COMMENT ON TABLE "trips_scheduled" IS 'stores all scheduled NYCT Trips';

COMMENT ON COLUMN "trips_scheduled"."service_id" IS '0, 1, or 2; for Weekday, Saturday, Sunday, respectively';

COMMENT ON TABLE "attempts" IS 'Represents a single challenge attempt by a user';

COMMENT ON TABLE "segment" IS 'represents a part of a journey that the user is to take.';

ALTER TABLE "trips_scheduled" ADD FOREIGN KEY ("route_id") REFERENCES "routes" ("id");

ALTER TABLE "trips_scheduled" ADD FOREIGN KEY ("shape_id") REFERENCES "shapes" ("id");

ALTER TABLE "transfers" ADD FOREIGN KEY ("from_stop_id") REFERENCES "stops" ("id");

ALTER TABLE "transfers" ADD FOREIGN KEY ("to_stop_id") REFERENCES "stops" ("id");

ALTER TABLE "trip_stop_times_scheduled" ADD FOREIGN KEY ("trip_id") REFERENCES "trips_scheduled" ("id");

ALTER TABLE "trip_stop_times_scheduled" ADD FOREIGN KEY ("stop_id") REFERENCES "stops" ("id");

ALTER TABLE "shape_points" ADD FOREIGN KEY ("shape_id") REFERENCES "shapes" ("id");

ALTER TABLE "attempts" ADD FOREIGN KEY ("user_id") REFERENCES "users" ("id");

ALTER TABLE "stops_visited" ADD FOREIGN KEY ("stop_id") REFERENCES "stops" ("id");

ALTER TABLE "stops_visited" ADD FOREIGN KEY ("attempt_id") REFERENCES "attempts" ("id");

ALTER TABLE "trip_stop_times_realtime" ADD FOREIGN KEY ("trip_id") REFERENCES "trips_scheduled" ("id");

ALTER TABLE "trip_stop_times_realtime" ADD FOREIGN KEY ("stop_id") REFERENCES "stops" ("id");

ALTER TABLE "segment" ADD FOREIGN KEY ("attempt_id") REFERENCES "attempts" ("id");

ALTER TABLE "segment" ADD FOREIGN KEY ("trip_id") REFERENCES "trips_scheduled" ("id");

ALTER TABLE "segment" ADD FOREIGN KEY ("from_stop_id") REFERENCES "stops" ("id");

ALTER TABLE "segment" ADD FOREIGN KEY ("to_stop_id") REFERENCES "stops" ("id");
